[gd_scene load_steps=4 format=3 uid="uid://4fkas61wyppq"]

[ext_resource type="Script" uid="uid://bkevbkfyf2a3m" path="res://towers/tower.gd" id="1_uyl23"]
[ext_resource type="Texture2D" uid="uid://bif7l67deifn7" path="res://assets/sprites/towers/Towers.png" id="1_wmotl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wmotl"]
radius = 218.00229

[node name="Tower" type="Node2D"]
script = ExtResource("1_uyl23")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wmotl")
region_enabled = true
region_rect = Rect2(128, 0, 64, 128)

[node name="ProjectileSpawnPos" type="Marker2D" parent="."]
position = Vector2(0, -30)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_wmotl")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
